test/subjects/errors/bad_arrays_read2.php
<?php
	$x[][]; // { Error: Cannot use [] for reading }
?>
